# GPU_INSCY

./: CMakeLists.txt  Cuda functions.md  inscy.py  inscy_map.cpp  main.ipynb  main.py  test_Node.py  test_node.cpp  test_pytorch.py
experiments/: compare_cpu_vs_gpu.py  compare_tree.py  plot.py  plot_all.py  plot_inc_d.py  plot_real.py  run.py  run_all.py  run_cpu.py  run_gpu.py  run_mix.py  run_mix_cl_streams.py  run_real.py  see_clusters.py  test.py
experiments/inc_F/: plot.py  plot_clusters.py  plot_speedup_weak.py  run.py
experiments/inc_d/: plot.py  plot_speedup.py  plot_speedup_weak.py  run.py  run_cpu.py  run_gpu.py  run_gpu_multi.py  run_gpu_multi2.py  run_gpu_multi2_cl_multi.py  run_gpu_multi2_cl_multi_mem.py  run_mix.py  run_mix_cl_streams.py
experiments/inc_epsilon/: plot.py  plot_speedup.py  plot_speedup_weak.py  run.py
experiments/inc_gridSize/: plot.py  plot_speedup_weak.py  run.py
experiments/inc_minPoints/: plot.py  plot_speedup.py  plot_speedup_weak.py  run.py
experiments/inc_n/: plot.py  plot_clusters.py  plot_speedup.py  plot_speedup_weak.py  run.py  run_cpu.py  run_gpu.py  run_gpu_multi.py  run_gpu_multi2.py  run_gpu_multi2_cl_multi.py  run_gpu_multi2_cl_multi_mem.py  run_mix.py  run_mix_cl_streams.py
experiments/inc_r/: plot.py  plot_clusters.py  plot_speedup.py  plot_speedup_weak.py  run.py
old_exp/experiments/: compare_cpu_vs_gpu.py  compare_tree.py  run.py  run_all.py
python/: inscy.py
src/python/: main.py  test.cpp  test_gpu.cu  test_pytorch_gpu.cu
src/structures/: Node.h  ScyTreeArray.cu  ScyTreeArray.h  ScyTreeNode.cu  (+1 more)
(+83 files in other folders)
